# report-lab-studio

./: .bandit.yml  .cursorrules  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  conftest.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  INFRASTRUCTURE.md  MAINTENANCE.md
docs/superpowers/plans/: 2026-03-28-template-workspace-redesign.md
mcp/: toolbox.env.example
mcp/gcloud-server/: package.json
mcp/stripe-server/: package.json
product_app/: __init__.py  artifact_storage.py  config.py  database.py  email_sender.py  email_templates.py  email_validator.py  magic_link.py  mcp_server.py  models.py  ops.py  otp_email.py  persistence.py  renderer_components.py  renderer_landing.py  renderer_workspace.py  report_email.py  runner.py  security.py  service.py  site_renderer.py  stripe_billing.py  tools.py  webapp.py  webhooks.py
product_app/research/: __init__.py  base.py  common.py  hello_world.py  registry.py
product_app/static/: app.js
product_app/templates/: index.html
scripts/: bootstrap_gcp.ps1  bootstrap_stripe.py  compare_market_quality.py  deploy_cloud_run.ps1  install_gcloud_mcp.ps1  install_mcp_toolbox.ps1  install_stripe_mcp.ps1  run_stripe_mcp.ps1
tests/: test_config_new_vars.py  test_email_validator.py  test_magic_link.py  test_mcp_server.py  test_persistence.py  test_registry.py  test_renderer_split.py  test_security.py  test_service.py  test_site_renderer.py  test_stripe_billing.py  test_webapp.py  test_webhooks.py
(+25 files in other folders)
